task-3/.kubernetes/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
  type: ClusterIP
